changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Fix bug #2017648 "applying devourer weap causes crash", this was a division by
zero bug that affected any "personalized blessings" weapons with a willpower in
the range 0-1000. Also fix some minor issues in the same code block (reordering
tests and reusing a variable instead of fetching it using get_ob_key_value 
twice).
 server/apply.c
Arvid Norlander 2008-07-17

In debug log message, check for null value and substitute as needed - it is
not universal that printf("%s", NULL) will not crash.
MSW 2008-07-07

Fix for bug #2009802 (alchemy experience not stored correctly): Remove useless
and dangerous casts to uint16 because both source and destination variables
are of type int, and the experience points for several recipes do not fit in
16 bits.
 common/recipe.c
Raphael Quinet 2008-07-03

Partially update metaserver specification.
 doc/metaserver
Andreas Kirschbaum 2008-06-27

Don't reset image checksum.
 common/image.c
Nicolas Weeger 2008-06-21

Fix for bug #1990016 (No message when using skills over an empty cauldron)
 server/alchemy.c
Raphael Quinet 2008-06-14

Add missing newlines in copyright header in some plugin source/header files.
 plugins/cfpython/include/cfpython.h
 plugins/cfpython/include/cfpython_object_private.h
 plugins/cfpython/include/cfpython_map.h
 plugins/cfpython/cfpython_map.c
 plugins/cfnewspaper/cfnewspaper.c
Arvid Norlander 2008-06-13

Reformat all header files in include/ to fit with current coding style standard,
a combination of using the astyle tool and manual review afterwards.
 include/define.h
 include/treasure.h
 include/commands.h